# Labs_OOP_06

./: CMakeLists.txt  README.md  toolchain.cmake
include/: druid.h  elf.h  factory.h  knight.h  npc.h  observers.h
src/: druid.cpp  elf.cpp  knight.cpp  main.cpp  npc.cpp
test/: test_01_kvse.txt  test_02_evsd.txt  test_03_dvsd.txt  test_04_save_load.txt  tests.cpp
